--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <img src="img/logo.png" width="110px" alt="Logo du site">
             </a>
             <ul class="nav nav-pills py-3">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Accueil</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Nos projets</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Nos prix</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Nous contacter</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Accueil</a></li>
+                <li class="nav-item"><a href="projets.html" class="nav-link">Nos projets</a></li>
+                <li class="nav-item"><a href="prices.html" class="nav-link">Nos prix</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">Nous contacter</a></li>
             </ul>
         </header>
     </div>
@@ -39,8 +39,8 @@
                         Toutes nos précédentes réalisations sont disponibles dans notre galerie.
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Voir nos projets</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Nous contacter</button>
+                        <a href="projets.html"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Voir nos projets</button></a>
+                        <a href="contact.html"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Nous contacter</button></a>
                     </div>
                 </div>
             </div>
@@ -49,21 +49,21 @@
             <hr class="presentation-divider">
             <div class="row presentation mb-5 mt-5">
                 <div class="col-md-7">
-                  <h2 class="presentation-heading">First presentation heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-                  <p class="lead">Some great placeholder content for the first presentation here. Imagine some exciting prose here.</p>
+                  <h2 class="presentation-heading">Réalisation tout travaux,<span class="text-muted"> isolation et ravalement facade.</span></h2>
+                  <p class="lead">Travaux de maçonnerie, rénovation et travaux sur la toiture, isolation, travaux de menuseries</p>
                 </div>
                 <div class="col-md-5">
                     <img src="img/house2.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
                 </div>
               </div>
               <hr class="presentation-divider">
-            <div class="row presentation">
-                <div class="col-md-7">
-                  <h2 class="presentation-heading">First presentation heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-                  <p class="lead">Some great placeholder content for the first presentation here. Imagine some exciting prose here.</p>
+              <div class="row presentation mb-5 mt-5">
+                <div class="col-md-7 order-md-2">
+                  <h2 class="presentation-heading">Construction neuve, <span class="text-muted"> ossature en bois ou en brique</span></h2>
+                  <p class="lead">Construction de votre maison neuve sur un terrain nu, avec une ossature en bois d'acajou éco-responsable ou en brique alvéolées.</p>
                 </div>
-                <div class="col-md-5">
-                    <img src="img/house2.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
+                <div class="col-md-5 order-md-1">
+                    <img src="img/house3.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
                 </div>
               </div>
         </div>
