--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap</title>
+    <title>C&S Renov - Nos projets</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,6 +22,13 @@
         </header>
     </div>
     <div class="container galerie">
+        <div class="position-relative overflow-hidden text-center">
+            <div class="col-md-8 p-lg-5 mx-auto my-5 tophead">
+                <h1 class="display-4 fw-normal">Nos projets</h1>
+                <p class="lead fw-normal">Retrouvez l'ensemble de nos projets réalisés aux cours des dernières années, sous forme d'une galerie.</p>
+            </div>
+        </div>
+        <hr class="presentation-divider mb-5">
         <div class="row">
             <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                 <img src="img/galerie3.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/>
