--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Wireframe : https://whimsical.com/site-bootstrap-2-8sSV7Fa2sXCH1pPFX1SdSN -->
+<!-- GitHub : https://github.com/Thomaslrt/Site-boostrap2 -->
+
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
