--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C&S Renov - Nous contacter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -64,10 +65,44 @@
                 </div>
             </div>
         </form>
-        <div class="row">
-            <div class="col-12 col-md-6">
+        <div class="row mx-auto pt-5">
+            <div class="col-12 col-md pe-5 bmap">
                 <div class="ratio ratio-16x9">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2892.9329424189973!2d6.451636715726937!3d43.52459106875505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ceac7cf1d9060b%3A0x53c496b50f3fdd2f!2s1131%20Voie%20Georges%20Pompidou%2C%2083300%20Draguignan!5e0!3m2!1sfr!2sfr!4v1621431818546!5m2!1sfr!2sfr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+            <div class="col-12 col-md ps-5">
+                <div class="row">
+                    <div class="col d-flex flex-row mb-4">
+                    <h4>Notre boutique :</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex flex-row">
+                    <i class="bi bi-geo-alt-fill me-2" style="margin-top:2px;"></i><h6>1131 Voie Georges Pompidou, 83300 Draguignan</h6>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex flex-row mt-3">
+                    <i class="bi bi-telephone-fill me-2" style="margin-top:2px;"></i><h6>08 92 97 70 52</h6>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex flex-row mb-4 mt-5">
+                    <h4>Horaires d'ouverture :</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h6 class="mb-3">Du lundi au vendredi :</h6>
+                        <p class="mb-0">08h30 - 12h30</p>
+                        <p>14h00 - 17h30</p>
+                    </div>
+                    <div class="col">
+                        <h6 class="mb-3">Le samedi :</h6>
+                        <p class="mb-0">08h30 - 12h30</p>
+                        <p>Fermé l'après-midi</p>
+                    </div>
                 </div>
             </div>
         </div>
