--- a/prices.html
+++ b/prices.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C&S Renov - Nos tarifs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="bouton"><a href="#" class="btn btn-primary boutontoggle">Marges</a><img src="img/settings.svg"/></div>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
@@ -15,8 +17,8 @@
             </a>
             <ul class="nav nav-pills py-3">
                 <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
-                <li class="nav-item"><a href="projets.html" class="nav-link active" aria-current="page">Nos projets</a></li>
-                <li class="nav-item"><a href="prices.html" class="nav-link">Nos prix</a></li>
+                <li class="nav-item"><a href="projets.html" class="nav-link">Nos projets</a></li>
+                <li class="nav-item"><a href="prices.html" class="nav-link active" aria-current="page">Nos prix</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Nous contacter</a></li>
             </ul>
         </header>
@@ -30,63 +32,122 @@
         </div>
         <div class="row">
             <div class="col-lg-4">
-                <div class="bg-white mt-3 price-box">
-                    <div class="pricing-name text-center">
+                <div class="bg-white mt-3 ctntarifl shadow">
+                    <div class=" text-center">
                         <h4 class="mb-0">Ravalement facade</h4>
                     </div>
-                    <div class="plan-price text-center mt-4">
-                        <h1 class="text-custom font-weight-normal mb-0">6550€<span> /Intervention</span></h1>
+                    <div class="prix text-center mt-4">
+                        <h1 class="text-custom font-weight-normal mb-0">6550€<span> / Intervention</span></h1>
                     </div>
-                    <div class="price-features mt-5">
-                        <p><i class="mdi mdi-check"></i>Nettoyage des murs</p>
-                        <p><i class="mdi mdi-check"></i>Réparations des dégâts</p>
-                        <p><i class="mdi mdi-check"></i>Rénovation des murs et façade</p>
-                        <p><i class="mdi mdi-check"></i>Intervention sous 24h</p>
+                    <div class="options mt-5">
+                        <p><i class="bi bi-check-circle"></i></i>Nettoyage des murs</p>
+                        <p><i class="bi bi-check-circle"></i></i>Réparations des dégâts</p>
+                        <p><i class="bi bi-check-circle"></i></i>Rénovation des murs et façade</p>
+                        <p><i class="bi bi-check-circle"></i></i>Protection / embellissement</p>
+                        <p><i class="bi bi-check-circle"></i></i>Intervention sous 24h</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4">
-                <div class="bg-white mt-3 price-box">
-                    <div class="pricing-name text-center">
+                <div class="bg-white mt-3 ctntarif shadow">
+                    <div class=" text-center">
                         <h4 class="mb-0">Travaux d'isolation</h4>
                     </div>
-                    <div class="plan-price text-center mt-4">
-                        <h1 class="text-custom font-weight-normal mb-0">$19<span>/Month</span></h1>
+                    <div class="prix text-center mt-4">
+                        <h1 class="text-custom font-weight-normal mb-0">48€<span> / m²</span></h1>
                     </div>
-                    <div class="price-features mt-5">
-                        <p><i class="mdi mdi-check"></i> Bandwidth: <span class="font-weight-bold">2GB</span></p>
-                        <p><i class="mdi mdi-check"></i> Onlinespace: <span class="font-weight-bold">5GB</span></p>
-                        <p><i class="mdi mdi-check"></i> Support: <span class="font-weight-bold">Yes</span></p>
-                        <p><i class="mdi mdi-check"></i> Domain: <span class="font-weight-bold">3</span></p>
-                        <p><i class="mdi mdi-check"></i> Hidden Fees: <span class="font-weight-bold">No</span></p>
-                    </div>
-                    <div class="text-center mt-5">
-                        <a href="#" class="btn btn-custom text-white">Join Now</a>
+                    <div class="options mt-5">
+                        <p><i class="bi bi-check-circle"></i></i>Isolation des murs</p>
+                        <p><i class="bi bi-check-circle"></i></i>Isolation des combles</p>
+                        <p><i class="bi bi-check-circle"></i></i>Isolation des fenêtres et ouvrants</p>
+                        <p><i class="bi bi-check-circle"></i></i>Isolation du sol</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="bg-white mt-3 price-box">
-                    <div class="pricing-name text-center">
-                        <h4 class="mb-0">Travaux toutes mains</h4>
+            <div class="col-lg-4 mb-5">
+                <div class="bg-white mt-3 ctntarifr shadow">
+                    <div class=" text-center">
+                        <h4 class="mb-0">Toiture</h4>
                     </div>
-                    <div class="plan-price text-center mt-4">
-                        <h1 class="text-custom font-weight-normal mb-0">$29<span>/Month</span></h1>
+                    <div class="prix text-center mt-4">
+                        <h1 class="text-custom font-weight-normal mb-0">1450€<span> / Intervention</span></h1>
                     </div>
-                    <div class="price-features mt-5">
-                        <p><i class="mdi mdi-check"></i> Bandwidth: <span class="font-weight-bold">3GB</span></p>
-                        <p><i class="mdi mdi-check"></i> Onlinespace: <span class="font-weight-bold">10GB</span></p>
-                        <p><i class="mdi mdi-check"></i> Support: <span class="font-weight-bold">Yes</span></p>
-                        <p><i class="mdi mdi-check"></i> Domain: <span class="font-weight-bold">Unlimited</span></p>
-                        <p><i class="mdi mdi-check"></i> Hidden Fees: <span class="font-weight-bold">No</span></p>
-                    </div>
-                    <div class="text-center mt-5">
-                        <a href="#" class="btn btn-custom text-white">Join Now</a>
+                    <div class="options mt-5">
+                        <p><i class="bi bi-check-circle"></i></i>Améloration du confort intérieur</p>
+                        <p><i class="bi bi-check-circle"></i></i>Réduction des dépenses</p>
+                        <p><i class="bi bi-check-circle"></i></i>Couverture photovoltaïque</p>
+                        <p><i class="bi bi-check-circle"></i></i>Protection des structures</p>
+                        <p><i class="bi bi-check-circle"></i></i>Choix de l'esthétique</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <footer class="pt-4 my-md-5 pt-md-5 border-top mx-auto tmdc">
+        <div class="row">
+          <div class="col col-md-6 col-lg-3">
+            <img class="mb-2" src="img/logo.png" alt="" width="180">
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <h5 id='mt-mb'>Notre agence</h5>
+            <ul class="list-unstyled text-small">
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Informations</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="prices.html">Services</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Toiture</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="projets.html">Nos projets</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="contact.html">Nous contacter</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 dc">
+            <h5>Informations</h5>
+            <ul class="list-unstyled text-small">
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="mentions-legales.html">Politique de confidentialité</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="mentions-legales.html">Conditions d'utilisation</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Sitemap</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 dc">
+            <h5>A propos</h5>
+            <ul class="list-unstyled text-small">
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">L'entreprise</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Nous contacter</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Partenaires</a></li>
+              <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Devenir partenaire</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script>
+        var state = false;
+        $(document).ready(function(){
+            $('.bouton').click(function(){
+                state = !state
+                if (state) {
+                        $(this).animate({"margin-left": "+=100"}, 1000, function() {
+                            console.log("av : "+state);
+                            state = true
+                            console.log("ap : "+state);
+                        });
+                } else {
+                        $(this).animate({"margin-left": "-=100"}, 1000, function() {
+                            console.log("av : "+state);
+                            state = false
+                            console.log("ap : "+state);
+                        });
+                }
+            });
+            $(".boutontoggle").click(function(){
+                $('div').each(function() {
+                    $(this).find('*').toggleClass('borderrr');
+                });
+            });
+        });
+
+        $(window).on('load', function() {
+            $('#newsletter').modal('show');
+        });
+    </script>
 </body>
 </html>
