Passage au format Webp + compression

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container col-xxl-8 px-4 py-5" id="infos">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="images/house1.jpg" class="d-block mx-lg-auto img-fluid" alt="Première image de maison" width="700" height="500" loading="lazy">
+                    <img src="images/house1.webp" class="d-block mx-lg-auto img-fluid" alt="Première image de maison" width="700" height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Une expérience de plus de cinquante ans</h1>
@@ -64,7 +64,7 @@
                   <p class="lead">Travaux de maçonnerie, rénovation et travaux sur la toiture, isolation, travaux de menuseries</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="images/house2.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
+                    <img src="images/house2.webp" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
                 </div>
               </div>
               <hr class="presentation-divider">
@@ -74,7 +74,7 @@
                   <p class="lead">Construction de votre maison neuve sur un terrain nu, avec une ossature en bois d'acajou éco-responsable ou en brique alvéolées.</p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="images/house3.jpg" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
+                    <img src="images/house3.webp" class="d-block mx-lg-auto img-fluid" alt="Deuxième image de maison" width="500" height="500" loading="lazy">
                 </div>
               </div>
         </div>
