--- a/projets.html
+++ b/projets.html
@@ -40,20 +40,20 @@
         <hr class="presentation-divider mb-5">
         <div class="row">
             <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                <a href="images/galerie3.jpg" data-lightbox="chantier"><img src="images/galerie3.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
-                <a href="images/galerie1.jpg" data-lightbox="chantier"><img src="images/galerie1.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
-                <a href="images/galerie7.jpg" data-lightbox="chantier"><img src="images/galerie7.jpg" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
+                <a href="images/galerie3.webp" data-lightbox="chantier"><img src="images/galerie3.webp" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
+                <a href="images/galerie1.webp" data-lightbox="chantier"><img src="images/galerie1.webp" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
+                <a href="images/galerie7.webp" data-lightbox="chantier"><img src="images/galerie7.webp" class="w-100 shadow-1-strong rounded mb-4" alt=""/></a>
             </div>
         
             <div class="col-lg-4 mb-4 mb-lg-0">
-                <a href="images/galerie2.jpg" data-lightbox="chantier"><img src="images/galerie2.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
-                <a href="images/galerie4.jpg" data-lightbox="chantier"><img src="images/galerie4.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+                <a href="images/galerie2.webp" data-lightbox="chantier"><img src="images/galerie2.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+                <a href="images/galerie4.webp" data-lightbox="chantier"><img src="images/galerie4.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
             </div>
         
             <div class="col-lg-4 mb-4 mb-lg-0">
-            <a href="images/galerie8.jpg" data-lightbox="chantier"><img src="images/galerie8.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
-            <a href="images/galerie6.jpg" data-lightbox="chantier"><img src="images/galerie6.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
-            <a href="images/galerie9.jpg" data-lightbox="chantier"><img src="images/galerie9.jpg" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+            <a href="images/galerie8.webp" data-lightbox="chantier"><img src="images/galerie8.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+            <a href="images/galerie6.webp" data-lightbox="chantier"><img src="images/galerie6.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
+            <a href="images/galerie9.webp" data-lightbox="chantier"><img src="images/galerie9.webp" class="w-100 shadow-1-strong rounded mb-4" data-lightbox="chantier" alt=""/></a>
             </div>
         </div>
     </div>
